<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_border"
    android:layout_margin="5dp"
    android:paddingVertical="12dp">

    <TextView
        android:id="@+id/studentNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentJim"
        android:textColor="#000000" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/presentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presentLabel" />
        <RadioButton
            android:id="@+id/lateRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lateLabel" />
        <RadioButton
            android:id="@+id/absentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absentLabel" />
        <RadioButton
            android:id="@+id/unknownRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownLabel" />
    </RadioGroup>
</LinearLayout>